# Klarity

./: .gitattributes  .gitignore  LICENSE  README.md  settings.gradle.kts
.github/workflows/: build-dependencies-debug.yml  build-dependencies-multiplatform.yml  build-dependencies.yml  build-jars.yml  build-klarity-macos.yml  build-klarity-ubuntu.yml  build-klarity-windows.yml  build-libplacebo.yml  build-linux-dependencies.yml  build-macos-dependencies.yml  build-native.yml  build-ubuntu-dependencies.yml  build-windows-dependencies.yml  build.yml  compile-dependencies.yml  compile-klarity.yml  compile-macos-dependencies.yml  compile-ubuntu-dependencies.yml  compile-windows-dependencies.yml
compose/: build.gradle.kts
compose/src/main/kotlin/component/: Controls.kt  CustomSlider.kt  MediaPlayer.kt  TimeIndicator.kt  Timeline.kt  Volume.kt  VolumeBar.kt
compose/src/main/kotlin/extension/: Long.kt
compose/src/main/kotlin/format/: FileFormat.kt  MediaFormat.kt
compose/src/main/kotlin/interaction/: ControlsInteraction.kt  Overlay.kt  Timeline.kt  VolumeControls.kt
compose/src/main/kotlin/playlist/: Remember.kt
compose/src/main/kotlin/renderer/: Background.kt  Foreground.kt  Renderer.kt
compose/src/main/kotlin/scale/: ImageScale.kt
compose/src/test/kotlin/scale/: ImageScalePreview.kt  ImageScaleTest.kt
core/: .gitignore  build.gradle.kts
core/src/main/cpp/: .gitignore  CMakeLists.txt  vcpkg.json
core/src/main/cpp/decoder/: CMakeLists.txt
core/src/main/cpp/decoder/include/klarity_decoder/: deleter.h
core/src/main/cpp/include/: common.h
core/src/main/cpp/include/data/: com_github_numq_klarity_core_data_NativeData.h
core/src/main/cpp/include/decoder/: com_github_numq_klarity_core_decoder_NativeDecoder.h  decoder-deleter.h  decoder.h  deleter.h  exception.h  format.h  frame.h  hwaccel.h  parameters.h  pool.h
core/src/main/cpp/include/decoder/ffmpeg/libavutil/: ffversion.h
core/src/main/cpp/include/memory/: com_github_numq_klarity_core_memory_NativeMemory.h
core/src/main/cpp/include/sampler/: com_github_numq_klarity_core_sampler_NativeSampler.h  sampler-deleter.h  sampler.h
core/src/main/cpp/include/sampler/dsp/: spectral.h
core/src/main/cpp/include/sampler/stretch/: stretch.h
core/src/main/cpp/pool/include/: pool.h
core/src/main/cpp/sampler/: .gitignore
core/src/main/cpp/sampler/include/: com_github_numq_klarity_core_sampler_NativeSampler.h
core/src/main/cpp/sampler/include/klarity_sampler/: exception.h  sampler.h
core/src/main/cpp/sampler/include/stretch/: stretch.h
core/src/main/cpp/src/: common.cpp
core/src/main/cpp/src/data/: com_github_numq_klarity_core_data_NativeData.cpp
core/src/main/cpp/src/decoder/: com_github_numq_klarity_core_decoder_NativeDecoder.cpp  decoder.cpp  hwaccel.cpp  pool.cpp
core/src/main/cpp/src/memory/: com_github_numq_klarity_core_memory_NativeMemory.cpp
core/src/main/cpp/src/sampler/: com_github_numq_klarity_core_sampler_NativeSampler.cpp  sampler.cpp
core/src/main/java/audio/: NativeAudio.java
core/src/main/java/decoder/: NativeDecoder.java  NativeFormat.java  NativeFrame.java
core/src/main/java/sampler/: NativeSampler.java
core/src/main/kotlin/audio/: AudioSample.kt  AudioSampler.kt  AudioSamplerException.kt  DefaultAudioSampler.kt  NativeAudioSampler.kt
core/src/main/kotlin/buffer/: AudioBufferFactory.kt  Buffer.kt  BufferException.kt  BufferFactory.kt  BufferManager.kt  BufferedFrame.kt  DefaultBuffer.kt  DefaultBufferManager.kt  DefaultFrameBuffer.kt  FrameBuffer.kt  VideoBufferFactory.kt
core/src/main/kotlin/clock/: Clock.kt  ClockFactory.kt  ExternalClock.kt
core/src/main/kotlin/command/: Command.kt
core/src/main/kotlin/controller/: DefaultPlayerController.kt  PlayerController.kt  PlayerControllerFactory.kt
core/src/main/kotlin/converter/: ByteArrayFrameConverter.kt
core/src/main/kotlin/decoder/: AudioDecoder.kt  AudioDecoderFactory.kt  DecodedFrame.kt  Decoder.kt  DecoderException.kt  DecoderFactory.kt  DefaultDecoder.kt  ImageSize.kt  ProbeDecoder.kt  ProbeDecoderFactory.kt  VideoDecoder.kt  VideoDecoderFactory.kt
core/src/main/kotlin/event/: Event.kt  PlayerEvent.kt
core/src/main/kotlin/exception/: JNIException.kt
core/src/main/kotlin/extension/: Frame.kt  Result.kt
core/src/main/kotlin/factory/: Factory.kt  SuspendFactory.kt
core/src/main/kotlin/format/: AudioFormat.kt  MediaFormat.kt  VideoFormat.kt
core/src/main/kotlin/frame/: DecodedFrame.kt  Frame.kt
core/src/main/kotlin/internal/: InternalDecoder.kt
core/src/main/kotlin/media/: ImageSize.kt  Location.kt  Media.kt  MediaInfo.kt  MediaSettings.kt
core/src/main/kotlin/pipeline/: Pipeline.kt
core/src/main/kotlin/playback/: DefaultPlaybackSynchronizer.kt  PlaybackEvent.kt  PlaybackState.kt  PlaybackStatus.kt  PlaybackSynchronizer.kt
core/src/main/kotlin/player/: DefaultKlarityPlayer.kt  KlarityPlayer.kt  MediaInfo.kt  PlaybackStatus.kt  PlayerController.kt  PlayerEvent.kt  PlayerState.kt
core/src/test/kotlin/: JNITest.kt
example/: build.gradle.kts
example/composeApp/: build.gradle.kts
example/src/main/kotlin/: CustomSlider.kt  Long.kt  Overlay.kt  TimeIndicator.kt  VolumeBar.kt  VolumeControls.kt
gradle/: libs.versions.toml
jni/jnidecoder/: .gitignore  CMakeLists.txt
jni/jnidecoder/include/: com_github_numq_klarity_core_decoder_NativeDecoder.h  decoder_NativeDecoder.h
jni/jnidecoder/include/ffmpeg/libavutil/: ffversion.h
jni/jnidecoder/include/klarity_decoder/: decoder.h  exception.h  format.h  frame.h  media.h
jni/jnidecoder/src/: com_github_numq_klarity_core_decoder_NativeDecoder.cpp  decoder_NativeDecoder.cpp
jni/jnipool/: CMakeLists.txt
jni/jnipool/include/: pool.h
jni/jnisampler/: CMakeLists.txt
jni/jnisampler/include/: com_github_numq_klarity_core_sampler_NativeSampler.h  sampler_NativeSampler.h
jni/jnisampler/include/klarity_sampler/: deleter.h  exception.h  media.h  sampler.h
jni/jnisampler/include/stretch/: stretch.h
jni/jnisampler/src/: com_github_numq_klarity_core_sampler_NativeSampler.cpp  sampler_NativeSampler.cpp
licenses/: PORTAUDIO_LICENSE
(+430 files in other folders)
